welcome.lessons.welcome.bat.bool2.NearTen.scala.error
nearTen:2: error: not a legal formal parameter
	if (num%10<=2 || num%10=>8){
                      ^